examples/test/testpolicy7677.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7677
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key19: value0
      key11: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value20
          key8: value31
      podSelector:
        matchLabels:
          key26: value43
